--- a/css/output.css
+++ b/css/output.css
@@ -557,20 +557,12 @@ video {
   margin-top: 0.75rem;
 }
 
-.block {
-  display: block;
-}
-
 .flex {
   display: flex;
 }
 
 .w-1\/2 {
   width: 50%;
-}
-
-.w-full {
-  width: 100%;
 }
 
 .flex-col {
@@ -602,105 +594,53 @@ video {
   background-color: rgb(63 63 70 / 0.5);
 }
 
-.bg-zinc-900\/75 {
-  background-color: rgb(24 24 27 / 0.75);
-}
-
 .bg-zinc-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity));
 }
 
-.bg-zinc-900\/50 {
-  background-color: rgb(24 24 27 / 0.5);
-}
-
-.p-2 {
-  padding: 0.5rem;
+.bg-zinc-900\/75 {
+  background-color: rgb(24 24 27 / 0.75);
 }
 
 .p-3 {
   padding: 0.75rem;
 }
 
-.text-center {
-  text-align: center;
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
-.text-slate-100 {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgb(241 245 249 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-zinc-500 {
+.text-zinc-400 {
   --tw-text-opacity: 1;
-  color: rgb(113 113 122 / var(--tw-text-opacity));
+  color: rgb(161 161 170 / var(--tw-text-opacity));
+}
+
+.shadow-\[0_0_2px_\#fff\2c inset_0_0_2px_\#fff\2c 0_0_5px_\#fff\2c 0_0_15px_\#fff\2c 0_0_30px_\#08f\] {
+  --tw-shadow: 0 0 2px #fff,inset 0 0 2px #fff,0 0 5px #fff,0 0 15px #fff,0 0 30px #08f;
+  --tw-shadow-colored: 0 0 2px var(--tw-shadow-color), inset 0 0 2px var(--tw-shadow-color), 0 0 5px var(--tw-shadow-color), 0 0 15px var(--tw-shadow-color), 0 0 30px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-\[0_0_2px_\#fff\2c inset_0_0_2px_\#fff\2c 0_0_5px_\#fff\2c 0_0_15px_\#fff\2c 0_0_30px_\#fff\] {
   --tw-shadow: 0 0 2px #fff,inset 0 0 2px #fff,0 0 5px #fff,0 0 15px #fff,0 0 30px #fff;
   --tw-shadow-colored: 0 0 2px var(--tw-shadow-color), inset 0 0 2px var(--tw-shadow-color), 0 0 5px var(--tw-shadow-color), 0 0 15px var(--tw-shadow-color), 0 0 30px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.file\:mr-4::file-selector-button {
-  margin-right: 1rem;
-}
-
-.file\:rounded-full::file-selector-button {
-  border-radius: 9999px;
-}
-
-.file\:border-0::file-selector-button {
-  border-width: 0px;
-}
-
-.file\:bg-zinc-500::file-selector-button {
-  --tw-bg-opacity: 1;
-  background-color: rgb(113 113 122 / var(--tw-bg-opacity));
-}
-
-.file\:px-4::file-selector-button {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.file\:py-2::file-selector-button {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.file\:text-sm::file-selector-button {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.file\:font-bold::file-selector-button {
-  font-weight: 700;
-}
-
-.file\:text-zinc-900::file-selector-button {
-  --tw-text-opacity: 1;
-  color: rgb(24 24 27 / var(--tw-text-opacity));
 }
 
 .hover\:bg-zinc-700:hover {
@@ -710,21 +650,4 @@ video {
 
 .hover\:underline:hover {
   text-decoration-line: underline;
-}
-
-.hover\:file\:bg-zinc-600::file-selector-button:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(82 82 91 / var(--tw-bg-opacity));
-}
-
-@media (min-width: 640px) {
-  .sm\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
-  .sm\:text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem;
-  }
 }
